Mute Lighty reflective access warnings
JIRA: TRNSPRTPCE-442
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: Icd684c09309fe6f7061c246f713f8e73e4ea82f4